Fix horizontal scrolling possibly

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 html {
   width: fit-content;
-  height: fit-content;
+  height: 100%;
 }
 
 /* Light Color Scheme */
